@@ -48,7 +48,7 @@ sub module_generate_hash
     literal_key => 1,
     header      => "none",
     keysize     => 16,
-    padding     => "null",
+    padding     => "none",
   });
 
   my $cipher2 = Crypt::CBC->new ({
@@ -58,7 +58,7 @@ sub module_generate_hash
     literal_key => 1,
     header      => "none",
     keysize     => 16,
-    padding     => "null",
+    padding     => "none",
   });
 
   my $encdata;
