@@ -192,7 +192,7 @@ sub module_generate_hash
         literal_key => 1,
         header      => "none",
         keysize     => 8,
-        padding     => "null",
+        padding     => "none",
       });
 
       my $p2 = Crypt::ECB->new ({
@@ -201,7 +201,7 @@ sub module_generate_hash
         literal_key => 1,
         header      => "none",
         keysize     => 8,
-        padding     => "null",
+        padding     => "none",
       });
 
       my $p3 = Crypt::ECB->new ({
@@ -210,7 +210,7 @@ sub module_generate_hash
         literal_key => 1,
         header      => "none",
         keysize     => 8,
-        padding     => "null",
+        padding     => "none",
       });
 
       # let's compute a 3DES-EDE-CBC decryption
@@ -258,7 +258,7 @@ sub module_generate_hash
         literal_key => 1,
         header      => "none",
         keysize     => 32,
-        padding     => "null",
+        padding     => "none",
       });
 
       my $expected_cleartext = $aes->decrypt ($cipher);
@@ -290,7 +290,7 @@ sub module_generate_hash
       literal_key => 1,
       header      => "none",
       keysize     => 8,
-      padding     => "null",
+      padding     => "none",
     });
 
     my $p2 = Crypt::ECB->new ({
@@ -299,7 +299,7 @@ sub module_generate_hash
       literal_key => 1,
       header      => "none",
       keysize     => 8,
-      padding     => "null",
+      padding     => "none",
     });
 
     my $p3 = Crypt::ECB->new ({
@@ -308,7 +308,7 @@ sub module_generate_hash
       literal_key => 1,
       header      => "none",
       keysize     => 8,
-      padding     => "null",
+      padding     => "none",
     });
 
     # let's compute a 3DES-EDE-CBC encryption
@@ -344,7 +344,7 @@ sub module_generate_hash
       literal_key => 1,
       header      => "none",
       keysize     => 32,
-      padding     => "null",
+      padding     => "none",
     });
 
     $cipher = $aes->encrypt ($cleartext);
